# IT_Class

./: README.md
C#_HelloWorld/Act/: Act.sln
C#_HelloWorld/Act/Act/: a.cs
C#_HelloWorld/Class_Ex/: Class_Ex.sln
C#_HelloWorld/Class_Ex/Class_Ex/: Program.cs
C#_HelloWorld/ConsoleApp1/: ConsoleApp1.sln
C#_HelloWorld/ConsoleApp1/ConsoleApp1/: ConsoleApp1.csproj  Main.cs  Variables.cs
C#_HelloWorld/Extra_Credit_Test_Redo/: Extra_Credit_Test_Redo.sln
C#_HelloWorld/Extra_Credit_Test_Redo/Extra_Credit_Test_Redo/: Program.cs
C#_HelloWorld/HW_1_1/: HW_1_1.sln
C#_HelloWorld/HW_1_1/HW_1_1/: Program.cs
C#_HelloWorld/HW_1_2/: HW_1_2.sln
C#_HelloWorld/HW_1_3/: HW_1_3.sln
C#_HelloWorld/HW_1_4/: HW_1_4.sln
C#_HelloWorld/HW_1_5/: HW_1_5.sln
C#_HelloWorld/HW_2_1/: HW_2_1.sln
C#_HelloWorld/HW_2_2/: HW_2_2.sln
C#_HelloWorld/HW_2_3/: HW_2_3.sln
CPP_HelloWorld/: CMakeLists.txt  Data_Examples  Data_Examples.cpp  Text_Extra_Credit_Corr  Text_Extra_Credit_Corr.cpp  XO2  main.cpp
CPP_HelloWorld/Act/: CMakeLists.txt  a.cpp  b.cpp  b.h  c.cpp  c.h  d.cpp  d.h  e.cpp
CPP_HelloWorld/HW_1/: HW_1_1  HW_1_1.cpp  HW_1_1.h  HW_1_3  HW_1_3.cpp  HW_1_3.h  HW_1_5  HW_1_5.cpp  HW_1_5.h
CPP_HelloWorld/HW_2/: HW_2_1  HW_2_1.cpp  HW_2_1.h  HW_2_2  HW_2_2.cpp  HW_2_2.h  HW_2_3  HW_2_3.cpp
CPP_Notes/: Aleatorio con arrays.c++  Arrays con listado.c++  Arrays.c++  CMakeLists.txt  Dibujar un trian.c++  Dibujar un trian2.c++  Email.c++  Numeros Aleatorios.c++  Tabla 1.c++  Testing_random  Testing_random.c++  XO2.c++  main.cpp  notes.c++
SQL/: HR SQL SERVER.sql
(+9 files in other folders)
