cmake_minimum_required(VERSION 3.27)
project(HelloWorld)

set(CMAKE_CXX_STANDARD 14)

add_executable(HelloWorld main.cpp
        Data_Examples.cpp
        ../CPP_Notes/XO2.c++
        HW_1/HW_1_1.cpp
        HW_1/HW_1_1.h
        HW_1/HW_1_3.cpp
        HW_1/HW_1_3.h
        HW_1/HW_1_5.cpp
        HW_1/HW_1_5.h
        HW_2/HW_2_1.cpp
        HW_2/HW_2_1.h
        HW_2/HW_2_2.cpp
        HW_2/HW_2_2.h
        HW_2/HW_2_3.cpp
        Text_Extra_Credit_Corr.cpp
        Text_Extra_Credit_Corr.h)
